rust/crates/spek/src/notation/snapshots/spek__notation__note__tests__test_note_from_strdouble_flat_octave.snap
---
source: crates/spek/src/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C𝄫4
Note { pitch: C, accs: [DoubleFlat], octave: Some(4), cents: None }
display:c𝄫4
