rust/crates/spek/src/notation/snapshots/spek__notation__note__tests__test_note_from_strdouble_sharp.snap
---
source: crates/spek/src/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:C𝄪
Note { pitch: C, accs: [DoubleSharp], octave: None, cents: None }
display:c𝄪
