rust/crates/spek/src/notation/snapshots/spek__notation__note__tests__test_note_from_strflat_octave.snap
---
source: crates/spek/src/notation/note.rs
expression: "format!(\"input:{input}\\n{result:?}\\ndisplay:{result}\")"
---
input:Cb4
Note { pitch: C, accs: [Flat], octave: Some(4), cents: None }
display:c♭4
